# urmpspace

./: .gitignore  .gitmodules  Control Room.perspective  ControlRoom.perspective  README.md  README_ALEXV.md  README_ATUL  README_COLE.md  README_CarlosGuerra  README_CorySimon.txt  README_MICHAEL  Workspace Dependencies.txt  bucket-binary.stl  bucket.scad  bucket.stl  nocudamake.sh
Unsupported Modules - Kinetic/phidgets_drivers/phidgets_imu/src/: imu_ros_i.cpp
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/lib/astro/: drive  talk
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/pkgconfig/: astro.pc  beginner_tutorials.pc
catkin_ws/devel/share/astro/cmake/: astroConfig.cmake
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
catkin_ws/src/astro/: CMakeLists.txt  package.xml
catkin_ws/src/astro/src/: drive.cpp  talker.cpp
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
catkin_ws/src/beginner_tutorials/launch/: turtlemimic.launch
catkin_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
libphidgets/: Makefile  config.status  libtool
libphidgets/.libs/: libphidget21.so.0.0.0
libphidgets/examples/: Makefile
src/amee/: CMakeLists.txt  package.xml
src/amee/launch/: amee.launch  competition.launch  display.launch  master_web.launch  movebase.launch  rtabmap.launch  teleop_control.launch  web_control.launch
src/amee/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/amee/src/: state_publisher.cpp  teleop_control.cpp
src/amee/urdf/: amee.gazebo  amee.gv  amee.urdf.xacro
src/amee_controllers/: CMakeLists.txt  README.md  package.xml
src/amee_controllers/action/: ActuatorPos.action  Coordinate.action  DumbMove.action
src/amee_controllers/config/: control.yaml  dumb_move_param.yaml
src/amee_controllers/nodes/: coordinate_action_server.py  dumb_move_action_server.py  position_action_servers.py
src/amee_controllers/test/: coordinate_action_client.py  dumb_move_action_client.py  dummy_pub.py  odom_driver.cpp  position_action_client.py
src/aruco_mapping/: CMakeLists.txt  README.md  frames.gv
src/aruco_mapping/data/: head_camera.ini  zed.ini
src/aruco_mapping/include/: aruco_mapping.h
src/aruco_mapping/launch/: aruco_config.rviz  aruco_mapping.launch  zed.launch
src/aruco_mapping/nodes/: aruco_helper.py
src/aruco_mapping/src/: aruco_helper.cpp  aruco_mapping.cpp  cole_helper.cpp
src/beacon/: CMakeLists.txt  package.xml
src/beacon/launch/: beacon.launch  test.launch
src/beacon/scripts/: findAngle.py
src/beacon/src/: beacon_node.cpp
src/gazebo_packages/: README.md
src/gazebo_packages/amee_gazebo/: CMakeLists.txt  package.xml
src/gazebo_packages/amee_gazebo/blender/: arms.blend  arms_visual.blend  bucket.blend  bucket_visual.blend  chassis.blend  linear_actuator.blend  sled.blend
src/gazebo_packages/amee_gazebo/launch/: gazebo.launch
src/gazebo_packages/amee_gazebo/worlds/: README.md  nasa_arena_dirt.world  nasa_minimal.world
src/gazebo_packages/amee_sim_control/: CMakeLists.txt  package.xml
src/gazebo_packages/amee_sim_control/config/: .ranges.txt  amee_control.yaml  amee_localization.yaml
src/gazebo_packages/amee_sim_control/launch/: control.launch  drive.launch  joy_teleop.launch
src/gazebo_packages/amee_sim_control/src/: joy_teleop.cpp
src/phidgets_ros/: CMakeLists.txt  README.md  package.xml
src/phidgets_ros/config/: config.yaml
src/phidgets_ros/launch/: phidget.launch
src/phidgets_ros/msg/: ActuatorStates.msg  ActuatorStatesProcessed.msg
src/phidgets_ros/nodes/: phidget_node.py
src/phidgets_ros/phidgets_example_code/: Bridge-simple.py  Encoder-simple.py  InterfaceKit-simple.py
src/pololu_ros/: CMakeLists.txt  README.md  setup.py
src/pololu_ros/launch/: daisy_node.launch
src/pololu_ros/nodes/: daisy_node.py
src/pololu_ros/src/: pololu_driver.py
src/roboclaw_serial_ros/: CMakeLists.txt  README.md  package.xml
src/roboclaw_serial_ros/config/: control.yaml
src/roboclaw_serial_ros/launch/: aggregator.launch  keyboard.launch  roboclaw.launch
src/roboclaw_serial_ros/nodes/: roboclaw_node.py
src/roboclaw_serial_ros/src/roboclaw_driver/: roboclaw_driver.py
src/turtlesim_reader/: CMakeLists.txt  package.xml
src/turtlesim_reader/src/: move_script.txt  reader.py  web_turtle.py
src/zed-ros-wrapper/launch/: zed_camera.launch  zed_robot.launch  zed_robot_tf.launch  zed_tf.launch
src/zed-ros-wrapper/src/: zed_wrapper_nodelet.cpp
webserver/: README(openMCT).txt
webserver/public-html/: index.php
webserver/public-html/interface_mockup/: index.html  main.js  stylesheet.css
