<?xml version="1.0"?>
<package>
  <name>phidgets_ros</name>
  <version>0.0.0</version>
  <description>The phidgets_ros package</description>

  <maintainer email="mattwilsonmbw@gmail.com">Matthew Wilson</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
