<?xml version="1.0"?>

<package>
  <name>amee_gazebo</name>
  <version>0.0.0</version>
  <description>The amee_gazebo package</description>

  <maintainer email="mattwilsonmbw@gmail.com">Matthew Wilson</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>


  <export>
      <!-- gazebo_ros_paths_plugin automatically adds these to
          GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
          the package.xml file. You can than use URIs of type model://my_package/stuff. -->
      <gazebo_ros
          gazebo_plugin_path="${prefix}/lib"
          gazebo_model_path="${prefix}/.." />
  </export>
</package>
